<resources>
    <string name="app_name">DataBytes</string>
    <string name="title_activity_hospital_new">hospital_new</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_patient">patient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Your Details</string>
    <string name="menu_gallery">Cases Folder</string>
    <string name="menu_slideshow">Guardian Details</string>
    <string name="menu_gene">Generate QR</string>
    <string name="menu_vrpres">Prescriptions</string>
    <string name="reminder">Thank You,I am grateful for the time you\'ve taken to read my application, I really appreciate your consideration of my application</string>
    <string name="menu_map">Prescriptions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="we_will_send_you_an_one_time_otp_on_this_given_mobile_number">We will send you an one time otp on this given mobile number</string>
    <string name="patient_login">PATIENT LOGIN</string>
</resources>