<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/nw"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_folder_copy_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_man_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gene"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/menu_gene" />
        <item
            android:id="@+id/nav_vpress"
            android:icon="@mipmap/img"
            android:title="@string/menu_vrpres" />
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/img"
            android:title="@string/menu_map" />
    </group>
</menu>